# isaac-robotics

./: .gitignore  README.md  VOXELIZER.md  pyproject.toml  run.bat  run.sh  test_visual_voxelizer_and_reward.ipynb  train.py  voxelizer.py
.claude/: settings.local.json
scripts/: list_envs.py  random_agent.py  zero_agent.py
scripts/skrl/: play.py  train.py
source/isaac_robots/: setup.py
source/isaac_robots/config/: extension.toml
source/isaac_robots/isaac_robots/: ui_extension_example.py
source/isaac_robots/isaac_robots/tasks/direct/isaac_eights/: __init__.py
source/isaac_robots/isaac_robots/tasks/direct/isaac_eights/agents/: skrl_ppo_cfg.yaml
source/isaac_robots/isaac_robots/tasks/direct/isaac_eights/cfg/: observations.py  scene.py  (+1 more)
source/isaac_robots/isaac_robots/tasks/direct/isaac_obstacle/: README.md  __init__.py  obstacle_nav_env.py  obstacle_nav_env_cfg.py  primhouse.usd  primhouse2.usd  warehouse.usd
source/isaac_robots/isaac_robots/tasks/direct/isaac_robots/: __init__.py  isaac_robots_env.py  isaac_robots_env_cfg.py
source/isaac_robots/isaac_robots/tasks/direct/warehouse/: __init__.py  warehouse_env.py  warehouse_env_cfg.py
source/isaac_robots/tasks/direct/isaac_robots/: crazyflie_env.py  crazyflie_env_cfg.py
source/isaac_robots/tasks/direct/isaac_robots/cfg/: __init__.py
src/crazyflie_lab/: __init__.py
src/crazyflie_lab/config/: __init__.py  assets.py  observations.py  obstacles.py  scene.py
src/crazyflie_lab/envs/: __init__.py  crazyflie_env.py
voxel_output/: distance_field.npz  distance_field_2d.npz  grid_metadata.json
(+16 files in other folders)
