[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crazyflie-isaac-lab"
version = "0.1.0"
description = "Modular Isaac Lab Crazyflie environment with optional sensor modules"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "GitHub Copilot" }]
license = { text = "Proprietary" }
keywords = ["isaac-lab", "crazyflie", "reinforcement-learning", "skrl"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
train = [
  "gymnasium>=0.29",
  "torch>=2.2",
  "skrl>=1.4.2",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]
